--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server,js",
   "scripts": {
     "test": "jest",
-    "start":"nodemon server"
+    "start": "nodemon server"
   },
   "keywords": [
     "NodeJS",
@@ -15,8 +15,12 @@
   "author": "Ashley Thibodeau",
   "license": "MIT",
   "dependencies": {
-    "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "mongoose": "^7.3.4",
     "morgan": "^1.10.0"
+  },
+  "devDependencies": {
+    "dotenv": "^16.3.1",
+    "nodemon": "^3.0.1"
   }
 }
